--- a/src/app/generic/text/text.component.html
+++ b/src/app/generic/text/text.component.html
@@ -9,10 +9,10 @@
             <div class="card-nav">
                 <ul class="nav nav-tabs">
                     <li class="nav-item">
-                        <a href="#text" class="nav-link active" data-toggle="tab" style="color: darkgray;">Texto</a>
+                        <a href="#text" class="nav-link active" data-toggle="tab" style="color: darkgray;">{{'TextComponent.Texto'|translate}}</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#gallery" class="nav-link" data-toggle="tab" style="color: darkgray;">Galeria</a>
+                        <a href="#gallery" class="nav-link" data-toggle="tab" style="color: darkgray;">{{'TextComponent.Galeria'|translate}}</a>
                     </li>
                 </ul>
             </div>
